# symplectix

./: .bazelignore  .bazelrc  .clang-format  .editorconfig  .envrc  .gitattributes  .gitignore  .justfile  .pre-commit-config.yaml  BUILD  Cargo.toml  MODULE.bazel  flake.nix  pyproject.toml  requirements.txt  terramate.tm.hcl  workspace_status.py
.claude/: .gitignore  CLAUDE.md  settings.json
.claude/commands/: issue.md  pr.md
.github/: dependabot.yml
.github/actions/bazel/: action.yml
.github/actions/cargo/: action.yml
.github/actions/check/: README.md  action.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yaml  postsubmit.yaml  postsubmit.yml  pr.yaml  presubmit.yaml  presubmit.yml
bazel/: BUILD  pkg.bzl  py.bzl  rust.bzl  sh.bzl  util.bzl
bazel/bazelrc/: ci.bazelrc  preset.bazelrc  profile.bazelrc  remote.bazelrc  user.bazelrc
bazel/bzlmod/: bazel_dep.MODULE.bazel  cc.MODULE.bazel  crate.MODULE.bazel  rust.MODULE.bazel
bazel/internal/: fuzz_transition.bzl  rust_fuzz_binary.bzl
bazel/platform/: BUILD.bazel
bazel/private/: BUILD.bazel  fuzz_transition.bzl  pyo3_extension.bzl  rust_fuzz_binary.bzl
bazel/pyo3/: BUILD.bazel
bazel/tools/: BUILD.bazel
boot/: BUILD.bazel  init.sh
crates/: README.md
crates/bitcomp_core/: Cargo.toml
crates/bitcomp_core/src/: bits.rs  lib.rs  page.rs
crates/bitcomp_core/tests/: mask.rs
crates/bitcomp_poppy/: BUILD.bazel
crates/bitcomp_poppy/src/: lib.rs
crates/bitcomp_roaring/: BUILD.bazel  Cargo.toml
crates/bitcomp_rrr/: BUILD.bazel
crates/bitcomp_rrr/src/: lib.rs
crates/bitcomp_slicing/: BUILD.bazel
crates/bitcomp_slicing/src/: build.rs  build_test.rs
crates/bitcomp_test/: BUILD.bazel  Cargo.toml
crates/bitcomp_test/benches/: rank_select.rs
crates/bitcomp_test/tests/: word.rs
crates/bitfunnel/: BUILD.bazel
crates/bits/src/: bits.rs  lib.rs  word.rs
crates/bits/tests/: mask.rs  page.rs
crates/compacts/: BUILD.bazel  Cargo.toml
crates/compacts/benches/: bits.rs  wm.rs
crates/faccess/: BUILD.bazel
crates/faccess/tests/: faccess.rs
crates/fenwicktree/: BUILD.bazel  Cargo.toml
crates/fenwicktree/tests/: fenwicktree_test.rs
crates/plying/: BUILD.bazel
crates/plying/src/: util.rs
crates/protoc_plugin/testdata/: example.proto
crates/subreaper/: BUILD.bazel
crates/subreaper/tests/: run.rs
crates/subreaper_test/: BUILD.bazel
crates/subreaper_test/src/: lib.rs
crates/testing/: BUILD.bazel
crates/testing/src/: lib.rs
devtool/: workspace_status.py
devtool/src/: lib.rs
infra/: .gitignore
infra/netns/: README.md  config.tm.hcl
infra/netns/host/: setup_host.yml
infra/netns/node/: config.tm.hcl  create_netns.yml
infra/netns/vms/: setup_vm_network.yml  stack.tm.hcl
nix/: README.md  flake.nix
nix/parts/: devshell.nix  githook.nix  hooks.nix  shell.nix
syx/: README.md
syx/bitcomp_core/: BUILD.bazel
syx/bitcomp_core/tests/: page.rs
syx/bitcomp_poppy/: BUILD.bazel  Cargo.toml
syx/bitcomp_poppy/src/: lib.rs
syx/bitcomp_roaring/: BUILD.bazel
syx/bitcomp_rrr/: BUILD.bazel
syx/bitcomp_rrr/src/: lib.rs
syx/bitcomp_slicing/: BUILD.bazel  Cargo.toml
syx/bitcomp_slicing/src/: block_test.rs  build.rs
syx/bitcomp_test/: BUILD.bazel
syx/bitcomp_test/benches/: rank_select.rs
syx/bitcomp_test/tests/: word.rs
syx/bitfunnel/: BUILD.bazel
syx/cas/: BUILD.bazel
syx/cas/src/: hash.rs  hash_test.rs  lib.rs  store.rs  store_test.rs
syx/cas/tests/: digest_fidelity.rs  digest_hex.rs  digest_is_deterministic.rs  digest_is_sensitive.rs  hasher_read_from.rs  storable_test.rs  store_corruption.rs  store_fidelity.rs  store_is_deterministic.rs  store_missing.rs  store_persists.rs  support.rs
syx/cas/tests/common/: mod.rs
syx/cas_cbor2/: BUILD
syx/cas_cbor2/src/: lib.rs
syx/compacts/: BUILD.bazel
syx/compacts/benches/: bits.rs  wm.rs
syx/faccess/: BUILD.bazel
syx/faccess/tests/: faccess.rs
syx/fenwicktree/: BUILD.bazel
syx/fenwicktree/src/: lib.rs
syx/func/: BUILD
syx/func/src/: function.rs  lib.rs  storable.rs
syx/func/tests/: command_digest_is_sensitive.rs  function_digest_is_deterministic.rs  function_digest_is_sensitive.rs  function_resolves_from_store.rs
syx/mdcstpp/: BUILD.bazel
syx/ply/: BUILD
syx/ply/src/: action.rs  blob.rs  function.rs  hash.rs  lib.rs  storable.rs  store.rs
syx/ply/tests/: command_digest_is_deterministic.rs  command_digest_is_sensitive.rs  function_digest_is_deterministic.rs  function_digest_is_sensitive.rs  function_resolves_from_store.rs  store_chunks_large_content.rs  store_fidelity.rs  store_is_deterministic.rs  store_missing.rs  store_persists.rs  store_reads_into_a_writer.rs  store_skips_compression_when_not_worthwhile.rs  tree_digest_is_deterministic.rs  tree_digest_is_sensitive.rs  tree_entries.rs  tree_interns.rs
syx/plying/: BUILD.bazel  __init__.py  _plying.pyi  _plying.rs  _plying_test.py  main.py  plying_test.py
syx/plying/src/xf/: filter.rs  map.rs  take.rs
syx/protoc_plugin/: BUILD.bazel
syx/shtok/: BUILD.bazel
syx/streamvbyte/: BUILD.bazel
syx/subreaper/: BUILD.bazel
syx/subreaper/tests/: run.rs
syx/subreaper_test/: BUILD.bazel
syx/syxvm/: BUILD.bazel  fc_start.sh  fc_stop.sh
syx/testinfra/: README.md
syx/unionfind/: BUILD.bazel
syx/varint/: BUILD.bazel
testbed/: BUILD.bazel  README.md  netns.yml  testkey  testkey.pub
testbed/group_vars/: all.yml
testbed/host_vars/: pqs.yml
testbed/inventory/: pqs
testbed/roles/boot_assets/tasks/: main.yml
testbed/roles/firecracker/tasks/: main.yml
testbed/roles/ip_forwarding/tasks/: main.yml
testbed/roles/kvm/tasks/: main.yml
testbed/roles/netns/tasks/: main.yml
testbed/roles/nftables/tasks/: main.yml
testbed/roles/node/tasks/: main.yml
testbed/roles/ping/tasks/: main.yml
testbed/roles/system_packages/tasks/: main.yml
testbed/roles/system_services/tasks/: main.yml
testbed/roles/veth_pair/tasks/: main.yml  set_ips.yml
testbed/roles/vext/tasks/: main.yml
testbed/roles/vwan/tasks/: main.yml
testbed/roles/zone/tasks/: main.yml
testbed/scripts/: fc_start.sh  fc_stop.sh
(+30 files in other folders)
