[workspace]
resolver = "3"
members = [
  "syx/bitcomp_core",
  "syx/bitcomp_poppy",
  "syx/bitcomp_roaring",
  "syx/bitcomp_slicing",
  "syx/bitcomp_test",
  "syx/bitfunnel",
  "syx/compacts",
  "syx/fenwicktree",
  "syx/mdcstpp",
  "syx/protoc_plugin",
  "syx/streamvbyte",
  "syx/unionfind",
  "syx/varint",
]

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
bitcomp_core = { path = "syx/bitcomp_core" }
bitcomp_poppy = { path = "syx/bitcomp_poppy" }
bitcomp_roaring = { path = "syx/bitcomp_roaring" }
bitcomp_slicing = { path = "syx/bitcomp_slicing" }
compacts = { path = "syx/compacts" }
fenwicktree = { path = "syx/fenwicktree" }

streamvbyte = { path = "syx/streamvbyte" }
varint = { path = "syx/varint" }

protoc_plugin = { path = "syx/protoc_plugin" }

anyhow = { version = "1" }
arc-swap = { version = "1.9" }
bitflags = { version = "2" }
bitpacking = { version = "0.9" }
bon = { version = "3.9" }
bytemuck = { version = "1.25" }
byteorder = { version = "1" }
cc = { version = "1" }
clap = { version = "4.6", features = ["derive"] }
criterion = { version = "0.8" }
futures = { version = "0.3" }
humantime = { version = "2" }
itertools = { version = "0.14" }
lazy_static = { version = "1.5" }
libc = { version = "0.2" }
libfuzzer-sys = { version = "0.4" }
num = { version = "0.4" }
prost = { version = "0.13" }
prost-reflect = { version = "0.14" }
prost-types = { version = "0.13" }
quickcheck = { version = "1" }
quickcheck_macros = { version = "1" }
rand = { version = "0.10" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tempfile = { version = "3" }
thiserror = { version = "1" }
tokio = { version = "1.52", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = { version = "0.26" }
tree-sitter-md = { version = "0.5" }

[workspace.lints.clippy]
# pedantic = "warn"

[workspace.lints.rust]
missing_docs = "deny"

[profile.dev.package.compacts]
overflow-checks = false

[profile.dev.package.fenwicktree]
overflow-checks = false

[profile.release]
lto = true
codegen-units = 1

# [profile.release.package.devtool]
# codegen-units = 32
