[project]
name = "symplectix"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
  "maturin==1.11.5",
  "pydantic==2.12",
]

[tool.uv]
python-downloads = "never"
python-preference = "only-system"

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
exclude = [".venv", ".direnv", "bazel-*"]
# .pyi stubs but no .py source.
reportMissingModuleSource = "none"

[tool.ruff]
target-version = "py314"
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  # Using this rule alongside the formatter may cause conflicts.
  # The formatter enforces consistent use of trailing commas, making the rule redundant.
  "COM812",
  # Allow passing a string literal to exceptions.
  "EM101",
  # Allow commented-out code.
  # Prone to false positives when checking comments that resemble Python code,
  # but are not actually Python code.
  "ERA",
  # Allow packages that are missing an __init__.py file.
  "INP001",
  # Allow print.
  "T201",
  # Allow specifying long messages outside the exception class.
  "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["A004", "F401"]
"*_test.py" = ["D100", "D103", "PLR2004", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"
