load("//bazel:pkg.bzl", "pkg")

pkg.files(
    name = "boot",
    srcs = [
        ":initrd",
        "@rootfs_squashfs//file",
        "@vmlinux//file",
    ],
    prefix = "boot",
    renames = {
        "@rootfs_squashfs//file": "rootfs.squashfs",
        "@vmlinux//file": "vmlinux",
    },
    visibility = ["//testbed:__pkg__"],
)

filegroup(
    name = "init_sh",
    srcs = ["init.sh"],
)

# TODO: Replace init_sh with this rust_binary.
#
# The Rust init should handle the following itself without no busybox or jq:
#   - mount proc, sysfs, devtmpfs, tmpfs, squashfs, overlayfs
#   - setup netlink socket
#   - MMDS fetch: plain HTTP/1.0 over TcpStream
#   - switch_root: MS_MOVE + chroot + exec via syscalls
#   - file ops: std::fs (mkdir, chmod, symlink)

genrule(
    name = "initrd",
    srcs = [
        ":init_sh",
        "@busybox_static//file",
        "@jq_static//file",
    ],
    outs = ["initrd.cpio.gz"],
    cmd = """
        set -e
        WORK=$$(mktemp -d)
        trap "rm -rf $$WORK" EXIT

        mkdir -p $$WORK/{bin,proc,sys,dev,mnt/lower,mnt/rw,mnt/root}

        install -m755 $(location :init_sh) $$WORK/init
        install -m755 $(location @jq_static//file) $$WORK/bin/jq
        install -m755 $(location @busybox_static//file) $$WORK/bin/busybox
        for cmd in sh mount umount ip wget switch_root mkdir chmod ln printf; do
            ln -sf busybox $$WORK/bin/$$cmd
        done
        (cd $$WORK && find . | sort | cpio -o -H newc | gzip -9) > $@
    """,
)
