# Convenience for setting groups of related Bazel flags
bazel_dep(
    name = "bazelrc-preset.bzl",
    version = "1.9.2",
    dev_dependency = True,
)

# Prebuilt binaries for buildifier and buildozer
bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.5.1.2",
    dev_dependency = True,
)

# Required to enable pre-built protoc binaries (avoid C++ compilation of protoc,
# which fails with the Zig/lld toolchain).
bazel_dep(
    name = "protobuf",
    version = "33.4",
    dev_dependency = True,
)

# Bazel target diffing between two git revisions
bazel_dep(
    name = "bazel-diff",
    version = "32.0.1",
    dev_dependency = True,
)

# Hermetic C/C++ toolchain using Zig-bundled Clang.
#
# TODO: match the LLVM version between rustc and zig cc.
#
# hermetic_cc_toolchain bundles a different LLVM version than rustc does.
# This mismatch breaks rust_proc_macro deps under fat LTO (see
# crate.MODULE.bazel), and could affect other LTO/bitcode-sensitive
# builds too.
#
# Compare the two with:
#
#   bazel run @rules_rust//tools/upstream_wrapper:rustc -- --version --verbose
#   bazel run @zig_sdk//:zig -- cc --version
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

# C++ rules
# An auto-detecting toolchain that expects to find tools installed on the host machine.
bazel_dep(name = "rules_cc", version = "0.2.17")

# Build rules for interfacing with "foreign" (non-Bazel) build systems
# (CMake, configure-make, GNU Make, boost, ninja, Meson).
# bazel_dep(name = "rules_foreign_cc", version = "0.14.0")

# TODO: link zstd-sys against this instead of vendor-build.
# See also crate.annotation() in crate.MODULE.bazel.
#
# Currently broken: @zstd//:zstd is static-only, and rules_rust's linker
# args for static native libs assume a dylib is available too.
# This may be fixed by bazelbuild/rules_rust#3993, not yet merged.
# bazel_dep(name = "zstd", version = "1.5.7.bcr.1")

# Rust rules for Bazel
rules_rust_version = "0.71.3"

bazel_dep(name = "rules_rust", version = rules_rust_version)
bazel_dep(name = "rules_rust_pyo3", version = rules_rust_version)
# bazel_dep(name = "rules_rust_bindgen", version = rules_rust_version)
# bazel_dep(name = "rules_rust_mdbook", version = rules_rust_version)
# bazel_dep(name = "rules_rust_prost", version = rules_rust_version)
# bazel_dep(name = "rules_rust_protobuf", version = rules_rust_version)

# Python rules for Bazel
bazel_dep(name = "rules_python", version = "2.2.0")
bazel_dep(name = "rules_uv", version = "0.89.2")

# Shell rules
bazel_dep(name = "rules_shell", version = "0.8.0")

# Constraint values for specifying platforms and toolchains
bazel_dep(name = "platforms", version = "1.1.0")

# Common functions and rules for Bazel
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# Libraries and rules for constructing rules and BUILD files
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

# Rules for creating packages (zip, tar, deb, rpm, ...)
bazel_dep(name = "rules_pkg", version = "1.2.0")

# Rules for building OCI containers
# bazel_dep(name = "rules_oci", version = "2.2.6")

# Build Protobuf and gRPC code from proto_library
# bazel_dep(name = "rules_proto_grpc", version = "5.5.0")
# bazel_dep(name = "rules_proto_grpc_doc", version = "<version number here>")
# bazel_dep(name = "rules_proto_grpc_grpcgateway", version = "<version number here>")
# bazel_dep(name = "rules_proto_grpc_buf", version = "<version number here>")
# bazel_dep(name = "rules_proto_grpc_cc", version = "<version number here>")
# bazel_dep(name = "rules_proto_grpc_go", version = "<version number here>")
