zig_sdk = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(zig_sdk, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.35",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.35",
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:darwin_arm64",
    "@zig_sdk//libc_aware/toolchain:linux_amd64_gnu.2.35",
    "@zig_sdk//libc_aware/toolchain:linux_arm64_gnu.2.35",
)
