crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
)
crate.spec(
    package = "anyhow",
    version = "1",
)
crate.spec(
    package = "bitflags",
    version = "2",
)
crate.spec(
    package = "bon",
    version = "3.9",
)
crate.spec(
    package = "byteorder",
    version = "1",
)
crate.spec(
    package = "bytemuck",
    version = "1.25",
)
crate.spec(
    features = ["derive"],
    package = "clap",
    version = "4.6",
)
crate.spec(
    package = "itertools",
    version = "0.14",
)
crate.spec(
    package = "lazy_static",
    version = "1.5",
)
crate.spec(
    package = "libc",
    version = "0.2",
)
crate.spec(
    package = "num",
    version = "0.4",
)
crate.spec(
    package = "prost",
    version = "0.13",
)
crate.spec(
    package = "prost-reflect",
    version = "0.14",
)
crate.spec(
    package = "prost-types",
    version = "0.13",
)
crate.spec(
    package = "quickcheck",
    version = "1",
)
crate.spec(
    package = "quickcheck_macros",
    version = "1",
)
crate.spec(
    package = "rand",
    version = "0.10",
)
crate.spec(
    features = ["derive"],
    package = "serde",
    version = "1",
)
crate.spec(
    package = "serde_json",
    version = "1",
)
crate.spec(
    package = "tempfile",
    version = "3",
)
crate.spec(
    package = "tree-sitter",
    version = "0.26",
)
crate.spec(
    package = "tree-sitter-md",
    version = "0.5",
)
crate.from_specs()
use_repo(crate, "crates")
