crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)
crate.spec(
    package = "anyhow",
    version = "1",
)
crate.spec(
    package = "arc-swap",
    version = "1.9",
)
crate.spec(
    package = "bitflags",
    version = "2",
)
crate.spec(
    package = "bitpacking",
    version = "0.9",
)
crate.spec(
    package = "bon",
    version = "3.9",
)
crate.spec(
    package = "byteorder",
    version = "1",
)
crate.spec(
    package = "bytemuck",
    version = "1.25",
)
crate.spec(
    features = ["derive"],
    package = "clap",
    version = "4.6",
)
crate.spec(
    package = "criterion",
    version = "0.8",
)
crate.spec(
    package = "futures",
    version = "0.3",
)
crate.spec(
    package = "humantime",
    version = "2",
)
crate.spec(
    package = "itertools",
    version = "0.14",
)
crate.spec(
    package = "lazy_static",
    version = "1.5",
)
crate.spec(
    package = "libc",
    version = "0.2",
)
crate.spec(
    package = "libfuzzer-sys",
    version = "0.4",
)
crate.spec(
    features = ["future"],
    package = "moka",
    version = "0.12.15",
)
crate.spec(
    package = "num",
    version = "0.4",
)
crate.spec(
    package = "prost",
    version = "0.13",
)
crate.spec(
    package = "prost-reflect",
    version = "0.14",
)
crate.spec(
    package = "prost-types",
    version = "0.13",
)
crate.spec(
    package = "quickcheck",
    version = "1",
)
crate.spec(
    package = "quickcheck_macros",
    version = "1",
)
crate.spec(
    package = "rand",
    version = "0.10",
)
crate.spec(
    package = "runfiles",
    version = "0.2",
)
crate.spec(
    features = ["derive"],
    package = "cbor2",
    version = "1.1.3",
)
crate.spec(
    features = ["derive"],
    package = "serde",
    version = "1",
)
crate.spec(
    package = "serde_bytes",
    version = "0.11",
)
crate.spec(
    package = "serde_json",
    version = "1",
)
crate.spec(
    package = "sha2",
    version = "0.11",
)
crate.spec(
    package = "tempfile",
    version = "3",
)
crate.spec(
    package = "thiserror",
    version = "1",
)
crate.spec(
    features = ["full"],
    package = "tokio",
    version = "1.52",
)
crate.spec(
    package = "tracing",
    version = "0.1",
)
crate.spec(
    features = ["env-filter"],
    package = "tracing-subscriber",
    version = "0.3",
)
crate.spec(
    package = "tree-sitter",
    version = "0.26",
)
crate.spec(
    package = "tree-sitter-md",
    version = "0.5",
)
crate.from_specs()
use_repo(crate, "crates")
