crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)

# Ad-hoc error type and derive macro for custom error enums.
crate.spec(
    package = "anyhow",
    version = "1",
)
crate.spec(
    package = "thiserror",
    version = "1",
)

# Async runtime and utilities.
crate.spec(
    features = ["full"],
    package = "tokio",
    version = "1.52",
)
crate.spec(
    package = "futures",
    version = "0.3",
)

# Structured, async-aware logging and instrumentation.
crate.spec(
    package = "tracing",
    version = "0.1",
)
crate.spec(
    features = ["env-filter"],
    package = "tracing-subscriber",
    version = "0.3",
)

# Reference-counted byte buffer (Bytes/BytesMut).
crate.spec(
    package = "bytes",
    version = "1",
)

# (De)serialization framework.
crate.spec(
    features = ["derive"],
    package = "serde",
    version = "1",
)
crate.spec(
    package = "serde_bytes",
    version = "0.11",
)
crate.spec(
    package = "serde_json",
    version = "1",
)
crate.spec(
    features = ["derive"],
    package = "cbor2",
    version = "1.1.3",
)

# Protobuf code generation and runtime.
crate.spec(
    package = "prost",
    version = "0.13",
)
crate.spec(
    package = "prost-reflect",
    version = "0.14",
)
crate.spec(
    package = "prost-types",
    version = "0.13",
)

# Command-line argument parsing.
crate.spec(
    features = ["derive"],
    package = "clap",
    version = "4.6",
)

# Atomically swappable Arc.
crate.spec(
    package = "arc-swap",
    version = "1.9",
)

# zstd compression bindings.
crate.spec(
    package = "zstd",
    version = "0.13",
)
crate.spec(
    features = [
        "tokio",
        "zstd",
    ],
    package = "async-compression",
    version = "0.4",
)

# SIMD bit-packing for integer sequences.
crate.spec(
    package = "bitpacking",
    version = "0.9",
)

# SHA-2 hash functions.
crate.spec(
    package = "sha2",
    version = "0.11",
)

# Embedded LSM-tree key-value store.
crate.spec(
    package = "fjall",
    features = ["bytes_1"],
    version = "3.1",
)

# Content-defined chunking (variable-size, dedup-friendly).
crate.spec(
    features = ["tokio"],
    package = "fastcdc",
    version = "4.0",
)

# Type-safe bitflag sets.
crate.spec(
    package = "bitflags",
    version = "2",
)

# Safe casting between plain data types.
crate.spec(
    package = "bytemuck",
    version = "1.25",
)

# Endian-aware integer (de)serialization.
crate.spec(
    package = "byteorder",
    version = "1",
)

# In-memory cache (sync and async).
crate.spec(
    features = ["future"],
    package = "moka",
    version = "0.12.15",
)

# Human-readable duration/timestamp parsing.
crate.spec(
    package = "humantime",
    version = "2",
)

# libFuzzer harness bindings.
crate.spec(
    package = "libfuzzer-sys",
    version = "0.4",
)

# Benchmarking harness.
crate.spec(
    package = "criterion",
    version = "0.8",
)

# Property-based testing.
crate.spec(
    package = "quickcheck",
    version = "1",
)

# Derive macros for quickcheck.
crate.spec(
    package = "quickcheck_macros",
    version = "1",
)

# Incremental parsing and grammars.
crate.spec(
    package = "tree-sitter",
    version = "0.26",
)
crate.spec(
    package = "tree-sitter-md",
    version = "0.5",
)

# Raw libc bindings.
crate.spec(
    package = "libc",
    version = "0.2",
)

# Random number generation.
crate.spec(
    package = "rand",
    version = "0.10",
)

# Temporary files and directories.
crate.spec(
    package = "tempfile",
    version = "3",
)

# Extra iterator adaptors.
crate.spec(
    package = "itertools",
    version = "0.14",
)

# Numeric traits and types.
crate.spec(
    package = "num",
    version = "0.4",
)

# Lazily-initialized statics.
crate.spec(
    package = "lazy_static",
    version = "1.5",
)

# Locate Bazel runfiles at runtime.
crate.spec(
    package = "runfiles",
    version = "0.2",
)

# Builder-pattern derive macro.
crate.spec(
    package = "bon",
    version = "3.9",
)

# TODO: see bazel_dep.MODULE.bazel for why this is disabled
# (bazelbuild/rules_rust#3993).
# crate.annotation(
#     crate = "zstd-sys",
#     gen_build_script = "off",
#     link_deps = ["@@zstd+//:zstd"],
# )

crate.from_specs()
use_repo(crate, "crates")
