platform(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

platform(
    name = "linux_amd64_gnu.2.17",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
        "@zig_sdk//libc:gnu.2.17",
    ],
)

platform(
    name = "linux_arm64_gnu.2.17",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
        "@zig_sdk//libc:gnu.2.17",
    ],
)

platform(
    name = "macos_amd64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
)
