load("@rules_rust//rust:defs.bzl", "rust_library_group")
load("@rules_rust_pyo3//:defs.bzl", "pyo3_toolchain", "rust_pyo3_toolchain")

rust_library_group(
    name = "pyo3",
    deps = ["@crates//:pyo3"],
)

rust_pyo3_toolchain(
    name = "rust_pyo3_toolchain",
    pyo3 = ":pyo3",
    pyo3_introspection = "@crates//:pyo3-introspection",
)

toolchain(
    name = "rust_toolchain",
    toolchain = ":rust_pyo3_toolchain",
    toolchain_type = "@rules_rust_pyo3//:rust_toolchain_type",
)

pyo3_toolchain(
    name = "pyo3_toolchain",
)

toolchain(
    name = "toolchain",
    toolchain = ":pyo3_toolchain",
    toolchain_type = "@rules_rust_pyo3//:toolchain_type",
)
