[package]
name = "bitcomp_roaring"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
bitcomp_core.workspace = true

[dev-dependencies]
lazy_static.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true
rand.workspace = true

[lints]
workspace = true
