load("//bazel:rust.bzl", "rust")

rust.build_script(
    name = "build_script",
    srcs = ["build.rs"],
)

rust.library(
    name = "bitcomp_rrr",
    srcs = [
        "src/lib.rs",
        "src/rrr04.rs",
        "src/rrr15.rs",
        "src/rrr31.rs",
        "src/rrr63.rs",
    ],
    compile_data = ["README.md"],
    visibility = ["//visibility:public"],
    deps = [":build_script"],
)

# The test reads `testdata/*.json` at run time via a path baked in at compile
# time from `env!("CARGO_MANIFEST_DIR")`, which only resolves correctly if the
# compile and test-run actions share the same exec root.
rust.test(
    name = "bitcomp_rrr_test",
    size = "small",
    crate = ":bitcomp_rrr",
    data = [
        "testdata/comb_table_16.json",
        "testdata/comb_table_32.json",
    ],
    proc_macro_deps = [
        "@crates//:quickcheck_macros",
    ],
    tags = ["no-sandbox"],
    deps = [
        "@crates//:quickcheck",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)
