load("//bazel:rust.bzl", "rust")

# NOTE: benches/ (rank_select.rs, rrr_encode_decode.rs, compint.rs) are out of
# scope for this migration and are not built here.
rust.library(
    name = "bitcomp_test",
    srcs = ["src/lib.rs"],
)

rust.test_suite(
    name = "bitcomp_test_test_suite",
    size = "small",
    srcs = ["tests/word.rs"],
    proc_macro_deps = [
        "@crates//:quickcheck_macros",
    ],
    deps = [
        "//crates/bitcomp_core",
        "@crates//:quickcheck",
    ],
)
