[package]
name = "bitcomp_test"
version.workspace = true
edition.workspace = true
publish = false
# benches/rrr_encode_decode.rs depends on bitcomp_rrr, which is Bazel-only
# (left the Cargo workspace). Disable autodiscovery so Cargo doesn't pick it
# up, and declare the remaining benches explicitly below.
autobenches = false

[[bench]]
harness = false
name = "rank_select"

[[bench]]
harness = false
name = "compint"

[dependencies]

[dev-dependencies]
bitcomp_poppy.workspace = true
bitcomp_roaring.workspace = true
bitcomp_slicing.workspace = true
bitpacking.workspace = true
bitcomp_core.workspace = true
criterion.workspace = true
lazy_static.workspace = true
rand.workspace = true
streamvbyte.workspace = true
varint.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true

[lints]
workspace = true
